--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "lint": "npx eslint src/**/*.ts",
     "format": "prettier ./src --write",
     "build": "tsc",
-    "dev": "npx nodemon -L src/app.ts ",
+    "prestart": "node -e \"const fs = require('fs'); const path = require('path'); const dirs = ['public/images', 'public/temp']; dirs.forEach(dir => { const fullPath = path.join(__dirname, dir); if (!fs.existsSync(fullPath)) { fs.mkdirSync(fullPath, { recursive: true }); console.log('Created directory:', fullPath); } });\"",
+    "dev": "npx nodemon -L src/app.ts",
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -38,27 +39,27 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
-  "@faker-js/faker": "^8.4.1",
-  "@types/jsonwebtoken": "^9.0.6",
-  "bcryptjs": "^2.4.3",
-  "celebrate": "^15.0.3",
-  "cookie": "^0.7.2",
-  "cookie-parser": "^1.4.6",
-  "cors": "^2.8.5",
-  "csrf-csrf": "^4.0.3",
-  "dotenv": "^16.4.5",
-  "escape-string-regexp": "^5.0.0",
-  "express": "^4.19.2",
-  "express-rate-limit": "^8.2.1",
-  "helmet": "^8.1.0",
-  "jsonwebtoken": "^9.0.2",
-  "md5": "^2.3.0",
-  "mime-types": "^2.1.35",
-  "mongoose": "^8.3.2",
-  "ms": "^2.1.3",
-  "multer": "^1.4.5-lts.1",
-  "sharp": "^0.33.4",
-  "unique-slug": "^4.0.0",
-  "validator": "^13.15.26"
-}
+    "@faker-js/faker": "^8.4.1",
+    "@types/jsonwebtoken": "^9.0.6",
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.3",
+    "cookie": "^0.7.2",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "csrf-csrf": "^4.0.3",
+    "dotenv": "^16.4.5",
+    "escape-string-regexp": "^5.0.0",
+    "express": "^4.19.2",
+    "express-rate-limit": "^8.2.1",
+    "helmet": "^8.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
+    "mime-types": "^2.1.35",
+    "mongoose": "^8.3.2",
+    "ms": "^2.1.3",
+    "multer": "^1.4.5-lts.1",
+    "sharp": "^0.33.4",
+    "unique-slug": "^4.0.0",
+    "validator": "^13.15.26"
+  }
 }
