--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,44 +1,27 @@
 server {
-    listen 80 default_server;
-    access_log  /var/log/nginx/access.log;
-    error_log  /var/log/nginx/error.log debug;
+	listen 80 default_server;
+	access_log  /var/log/nginx/access.log;
+	error_log  /var/log/nginx/error.log debug;
     client_max_body_size 10m;
 
     location /api/ {
         rewrite ^/api(.*)$ $1  break;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://backend:3000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        
-        # Добавляем CORS заголовки для API
-        add_header 'Access-Control-Allow-Origin' '$http_origin' always;
-        add_header 'Access-Control-Allow-Credentials' 'true' always;
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since' always;
-        
-        # Обработка preflight запросов
-        if ($request_method = 'OPTIONS') {
-            add_header 'Access-Control-Allow-Origin' '$http_origin';
-            add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, PATCH, DELETE, OPTIONS';
-            add_header 'Access-Control-Allow-Headers' 'Authorization,Content-Type,Accept,Origin,User-Agent,DNT,Cache-Control,X-Mx-ReqToken,Keep-Alive,X-Requested-With,If-Modified-Since';
-            add_header 'Access-Control-Max-Age' 1728000;
-            add_header 'Content-Type' 'text/plain charset=UTF-8';
-            add_header 'Content-Length' 0;
-            return 204;
-        }
+    }
+
+    location ~* \.(json|ico)$ {
+        root /var/public/;
+        try_files $uri $uri/ =404;
     }
 
     location / {
         root /var/app;
         index index.html index.htm;
         try_files $uri $uri/ /index.html;
-        
-        # CSP для статических файлов
-        add_header Content-Security-Policy "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data: blob:; font-src 'self'; connect-src 'self' http://localhost:3000; frame-ancestors 'none';" always;
     }
 }
