--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,7 @@
     "lint": "npx eslint src/**/*.ts",
     "format": "prettier ./src --write",
     "build": "tsc",
-    "prestart": "node -e \"const fs = require('fs'); const path = require('path'); const dirs = ['public/images', 'public/temp']; dirs.forEach(dir => { const fullPath = path.join(__dirname, dir); if (!fs.existsSync(fullPath)) { fs.mkdirSync(fullPath, { recursive: true }); console.log('✓ Создана директория:', fullPath); } });\"",
+    "prestart": "mkdir -p public/images public/temp",
     "dev": "npx nodemon -L src/app.ts",
     "start": "ts-node src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -58,6 +58,7 @@
     "mongoose": "^8.3.2",
     "ms": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "sharp": "^0.34.5",
     "unique-slug": "^4.0.0",
     "validator": "^13.15.26"
   }
